Upgrade to Java 22 and make changes to the overall quality of code